--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,11 @@
 /[Ll]ogs/
 /[Uu]ser[Ss]ettings/
 
+#Added by me
+/[Kk]ey[Ss]tore/   
+[Kk]ey[Ss]tore
+*.keystore
+
 # MemoryCaptures can get excessive in size.
 # They also could contain extremely sensitive data
 /[Mm]emoryCaptures/
